<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intents</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tituloProjeto">Intents</string>
    <string name="b1">Switch Telas</string>
    <string name="b2">Transferindo dados</string>
    <string name="b3">Transferindo dados 2</string>
    <string name="b4">Discagem</string>
    <string name="b5">Chamada</string>
    <string name="b6">E-mail</string>
    <string name="b7">Compartilhando algo</string>
    <string name="title_activity_second">SecondActivity</string>

</resources>
