<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloProjeto"
        android:textSize="30sp"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nextScreen"
        android:text="@string/b1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nextDataTransf"
        android:text="@string/b2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nextDataTransf2"
        android:text="@string/b3" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="discagem"
        android:text="@string/b4" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="chamada"
        android:text="@string/b5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:text="@string/b6" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/b7" />

</LinearLayout>
